@startuml

title __FACTCAST-SCHEMA-REGISTRY-MAVEN-PLUGIN's Class Diagram__\n

  namespace org.factcast.schema.registry.plugin {
    class org.factcast.schema.registry.plugin.BuildMojo {
    }
  }
  

  namespace org.factcast.schema.registry.plugin {
    class org.factcast.schema.registry.plugin.HelpMojo {
    }
  }
  

  namespace org.factcast.schema.registry.plugin {
    class org.factcast.schema.registry.plugin.ValidateMojo {
    }
  }
  

  org.factcast.schema.registry.plugin.BuildMojo -up-|> org.apache.maven.plugin.AbstractMojo
  org.factcast.schema.registry.plugin.HelpMojo -up-|> org.apache.maven.plugin.AbstractMojo
  org.factcast.schema.registry.plugin.ValidateMojo -up-|> org.apache.maven.plugin.AbstractMojo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
